tests/ghci/scripts/T17549.stderr

T17549.hs:1:7: error: [GHC-58481]
    parse error (possibly incorrect indentation or mismatched brackets)
