tests/ghci/scripts/T17549.script
writeFile "T17549.hs" ""
:load T17549.hs
writeFile "T17549.hs" "import"
:reload
1

